# fave-relations

./: README.md  example.html  pyproject.toml
docs/: index.html
output/: index.html
src/fave_relations/: __init__.py  main.py
