[project]
name = "fave-relations"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "funwarioisii", email = "kazuyukihashimoto2006@gmail.com" }
]
dependencies = [
    "streamlit>=1.27.1",
    "pyvis>=0.3.2",
    "networkx[default]>=3.1",
    "pandas>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
]

[tool.hatch.metadata]
allow-direct-references = true
